--- a/angularclient/package.json
+++ b/angularclient/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "@syncfusion/ej2-angular-popups": "^20.3.50",
     "@syncfusion/ej2-popups": "^20.3.50",
+    "@types/parse5": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
