--- a/angularclient/tsconfig.json
+++ b/angularclient/tsconfig.json
@@ -16,11 +16,16 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "noImplicitAny": false,
     "target": "es2020",
     "module": "es2020",
     "lib": [
       "es2020",
       "dom"
+    ],
+    "typeRoots": [
+      "typings",
+      "node_modules/@types"
     ]
   },
   "angularCompilerOptions": {
@@ -28,5 +33,6 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "allowJs": true
 }
